# dejavue

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  STEWARDSHIP.md  context.md  continued.md  dejavue.py  example_usage.md  foundry.toml  pyproject.toml
.claude/skills/: dejavue  dejavue-workflow
.dejavue/: context.md  decisions.md  handoff.md  invariants.md  patterns.md  plan.md  rules.md  state.md  timeline.jsonl
.dejavue/dejavue/: SKILL.md
.dejavue/dejavue-workflow/: SKILL.md
completions/: _dejavue.zsh  dejavue.bash  dejavue.fish
docs/: 02-evolution.md  03-example.md  04-design-perspective.md  04-foreman-perspective.md  05-v0.1-scope.md  06-strengths-and-gaps.md  07-toolchain-integration.md  08-thin-wrapper.md  dcp-spec.md
docs/plans/: 2026-06-05-dcp-maturation.md
examples/seeded-by-chatgpt/: README.md
examples/seeded-by-chatgpt/.dejavue/: concept.md  current_state.md  decisions.md  deja-vue.md  handoff.md  state.md  timeline.jsonl
examples/seeded-by-chatgpt/.joker/: decisions.md  deja-vue.md  handoff.md  timeline.jsonl
examples/thin-wrapper/: README.md  dejavue-wrapper.py  mcp-tools.json
skills/dejavue/: SKILL.md
skills/dejavue-workflow/: SKILL.md
tests/: test_dejavue.sh
